# playground-manim

./: README.md  pyproject.toml
playground_manim/: helloworld.py  himmelblau.py  main.py  sin.py  sorting.py  trig.py  tutorial.py
