[tool.poetry]
name = "playground-manim"
version = "0.1.0"
description = ""
authors = ["benleong0 <benleong@myurbanjungle.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
manim = "^0.18.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"
pyright = "^1.1.391"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
